--- a/.github/workflows/waka-readme.yml
+++ b/.github/workflows/waka-readme.yml
@@ -1,28 +1,19 @@
 name: Waka Readme
 
 on:
+  workflow_dispatch: # for manual workflow trigger
   schedule:
-    - cron: '0 8 * * *'
-  workflow_dispatch:
+    - cron: "0 0 * * *" # runs at every 12AM UTC
 
 jobs:
   update-readme:
-    name: Update Readme with Metrics
+    name: WakaReadme DevMetrics
     runs-on: ubuntu-latest
     steps:
-      - uses: anmol098/waka-readme-stats@master
+      - uses: athul/waka-readme@master
         with:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
-          GH_TOKEN: ${{ secrets.GH_TOKEN }}
-          SHOW_LINES_OF_CODE: False
-          SHOW_PROFILE_VIEWS : False
-          SHOW_COMMIT : False
-          SHOW_DAYS_OF_WEEK : False
-          SHOW_LANGUAGE : True
-          SHOW_OS : True
-          SHOW_PROJECTS : False
-          SHOW_TIMEZONE : False
-          SHOW_EDITORS : True
-          SHOW_LANGUAGE_PER_REPO : False
-          SHOW_SHORT_INFO : False
-          SHOW_LOC_CHART : False
+          # following flags are required, only if this is not on
+          # profile readme, remove the leading `#` to use them
+          #GH_TOKEN: ${{ secrets.GH_TOKEN }}
+          #REPOSITORY: <gh_username/gh_username>
